grpc/externalnlb-envoy/base/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-svc
spec:
  type: LoadBalancer
  selector: 
    app: envoy
  ports:
  - name: envoy
    protocol: TCP
    port: 50051 # <- grpc port direct map
    targetPort: 50051 # <- grpc port direct map
