grpc/externalnlb-envoy/base/greet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greet-grpc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greet-grpc
  template:
    metadata:
      labels:
        app: greet-grpc
    spec:
      containers:
      - name: greet-grpc
        image: guitarrapc/grpc-example-server-csharp:v0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051","-service=Check"]
          initialDelaySeconds: 1
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051","-service=Check"]
          initialDelaySeconds: 5
